Velcro test First SandBox/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>APAC Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Committed</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Sales Process</fullName>
        <description>Sales Process for existing customers</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Customer Review</fullName>
        </values>
        <values>
            <fullName>Evaluation%2FSampling</fullName>
        </values>
        <values>
            <fullName>Negotiate%2FClose</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Registration%2FQuoting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Development Request</fullName>
        <description>Development Requests sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Concept%2FPRB</fullName>
        </values>
        <values>
            <fullName>Deployment%2FWon</fullName>
        </values>
        <values>
            <fullName>Development%2FQuoting</fullName>
        </values>
        <values>
            <fullName>Evaluation%2FSampling</fullName>
        </values>
        <values>
            <fullName>Feasibility%2FITC</fullName>
        </values>
        <values>
            <fullName>Hunting</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EMEA Sales Process</fullName>
        <description>EMEA&apos;s Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Committed</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Ready for closure</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospect Sales Process</fullName>
        <description>Sales Process for prospect accounts only includes an account set-up step.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Committed</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Negotiating</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Ready for closure</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AED_Incremental_Annual_Sales__c</fullName>
        <inlineHelpText>Estimate the annual incremental sales dollars. This should not include existing sales of the same part to this customer</inlineHelpText>
        <label>Incremental Annual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AED_NPI_Number__c</fullName>
        <displayFormat>AEDNPI-{00000000}</displayFormat>
        <label>AED/NPI Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AED_Number__c</fullName>
        <inlineHelpText>The AED number from the AED Form.</inlineHelpText>
        <label>AED Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AED_Status__c</fullName>
        <label>AED Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project Request</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Technical Review</fullName>
                </value>
                <value>
                    <fullName>OPS Review</fullName>
                </value>
                <value>
                    <fullName>Assign Project</fullName>
                </value>
                <value>
                    <fullName>BU Review</fullName>
                </value>
                <value>
                    <fullName>ITC Review</fullName>
                </value>
                <value>
                    <fullName>PLT Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AED_Sustaining_Annual_Sales__c</fullName>
        <inlineHelpText>Current sales of the part being replaced or improved upon by this request. If this is totally new business,leave blank</inlineHelpText>
        <label>Sustaining Annual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <formula>text(Account.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCurrency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address__c</fullName>
        <formula>Account.BillingStreet &amp; &quot; &quot; &amp; Account.BillingCity &amp; &quot; , &quot; &amp; Account.BillingState &amp; &quot; &quot; &amp;   Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <description>EMEA-only field</description>
        <formula>TEXT( Account.Customer_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Gross_Budget__c</fullName>
        <formula>Account.Gross_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Account Gross Budget field</inlineHelpText>
        <label>Account Gross Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Operating_Unit__c</fullName>
        <description>Oracle Operating Unit</description>
        <formula>CASE(UPPER(Account.Org__c), &apos;VESA&apos;, &apos;485&apos;, &apos;VLTD&apos;, &apos;525&apos;, &apos;VGMBH&apos;, &apos;766&apos;, &apos;VIF&apos;, &apos;946&apos;, &apos;VEIT&apos;, &apos;1026&apos;, &apos;VCAN&apos;, &apos;86&apos;, &apos;VUSA&apos;, &apos;89&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Operating Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Oracle_Id__c</fullName>
        <formula>CASE( 
 Find(&apos;-&apos;, Account.Oracle_Account_Id__c), 0, Account.Oracle_Account_Id__c, 
 Left (Account.Oracle_Account_Id__c, Find(&apos;-&apos;, Account.Oracle_Account_Id__c) - 1) 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Oracle Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Org__c</fullName>
        <formula>Account.Org__c</formula>
        <label>Account Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SBU__c</fullName>
        <formula>text(Account.SBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Address__c</fullName>
        <formula>Account.ShippingStreet &amp; &quot; &quot; &amp; Account.ShippingCity &amp; &quot; , &quot; &amp; Account.ShippingState &amp; &quot; &quot; &amp; Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_CloseDate__c</fullName>
        <inlineHelpText>Is required when Closed</inlineHelpText>
        <label>实际成功日或放弃日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Align__c</fullName>
        <label>Align With Velcro Strategy?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_F_APAC__c</fullName>
        <formula>Amount/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年度业务机会潜力(千人民币)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_UOM__c</fullName>
        <inlineHelpText>Unit of Measure</inlineHelpText>
        <label>Annual Volume UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Inches</fullName>
                </value>
                <value>
                    <fullName>Pcs</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Sq Yards</fullName>
                </value>
                <value>
                    <fullName>Sq Meters</fullName>
                </value>
                <value>
                    <fullName>Sets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Volume_Units__c</fullName>
        <inlineHelpText>Annual Volume Quantity ( Pieces, Yard, Meters, etc)</inlineHelpText>
        <label>Annual Volume Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <inlineHelpText>Estimated Annual Volume in Dollars</inlineHelpText>
        <label>Annual Volume $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apparel_Brand_APAC__c</fullName>
        <inlineHelpText>Is required when SBU is &quot;Transportation&quot; or Customer Category is &quot;Apparel&quot;</inlineHelpText>
        <label>OEM/Brand</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apparel_Vendor__c</fullName>
        <inlineHelpText>Is required when SBU is &quot;Transportation&quot; or Customer Category is &quot;Apparel&quot;</inlineHelpText>
        <label>Tier 1/Vendor</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <inlineHelpText>How is the product going to be used? What does this product have to do?</inlineHelpText>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplyDate_APAC__c</fullName>
        <label>ApplyDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Engineer__c</fullName>
        <description>EMEA-only field.</description>
        <inlineHelpText>Name of the Engineer assigned. If more than one, please separate names with comma.</inlineHelpText>
        <label>Assigned to Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Annual_Value__c</fullName>
        <formula>Amount / Length_of_Project_Years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Letter_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Award Letter Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Binder_Coating__c</fullName>
        <inlineHelpText>Binder Coating</inlineHelpText>
        <label>Binder Coating</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted__c</fullName>
        <inlineHelpText>Is this in the current FY budget?</inlineHelpText>
        <label>In Budget?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDF__c</fullName>
        <description>Support field: make the &apos;Created date&apos;  avilable for formulas and reports</description>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Fix</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMOD_Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>CRMOD_Opportunity_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CY_TotalPercent__c</fullName>
        <formula>Q1_CY_Pct__c +  Q2_CY_Pct__c +  Q3_CY_Pct__c +  Q4_CY_Pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CY % Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CY_Total__c</fullName>
        <description>EMEA-only field</description>
        <formula>Q1_CY_Amount__c  +  Q2_CY_Amount__c  +  Q3_CY_Amount__c + Q4_CY_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Q1 CY Amount + Q2 CY Amount + Q3 CY Amount + Q3 CY Amount</inlineHelpText>
        <label>CY Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>TEXT(Campaign.Type)</formula>
        <label>Campaign Type?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Category__c</fullName>
        <description>PC PDR</description>
        <label>Client Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercialize</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>FEI</fullName>
                </value>
                <value>
                    <fullName>Parked</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Project (Closed)</fullName>
                </value>
                <value>
                    <fullName>Project (Complete)</fullName>
                </value>
                <value>
                    <fullName>Samples</fullName>
                </value>
                <value>
                    <fullName>Samples?</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Supply (Closed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Won_Amount__c</fullName>
        <formula>If( ISPICKVAL(StageName, &quot;Closed Won&quot;),CASE( text(CurrencyIsoCode) , &quot;USD&quot;, Amount , &quot;CAD&quot;, Amount / value(&quot;.943400&quot;),&quot;BRL&quot;, Amount / value(&quot;0.434800&quot;),&quot;MXN&quot;, Amount / value(&quot;0.078700&quot;),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cnverted_Lead_Amount__c</fullName>
        <label>Cnverted Lead Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <inlineHelpText>If it Applies. If not , add &quot;N/A&quot;</inlineHelpText>
        <label>Color</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Amount__c</fullName>
        <formula>If( ISPICKVAL(StageName, &quot;Committed&quot;),CASE( text(CurrencyIsoCode) , &quot;USD&quot;, Amount , &quot;CAD&quot;, Amount / value(&quot;.943400&quot;),&quot;BRL&quot;, Amount / value(&quot;0.434800&quot;),&quot;MXN&quot;, Amount / value(&quot;0.078700&quot;),0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competition_1__c</fullName>
        <label>Competition 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Lost_Business_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3M</fullName>
                </value>
                <value>
                    <fullName>A &amp; E</fullName>
                </value>
                <value>
                    <fullName>Accumed</fullName>
                </value>
                <value>
                    <fullName>Aplix</fullName>
                </value>
                <value>
                    <fullName>Avery Dennsion</fullName>
                </value>
                <value>
                    <fullName>Binder</fullName>
                </value>
                <value>
                    <fullName>Bostik</fullName>
                </value>
                <value>
                    <fullName>Faswell</fullName>
                </value>
                <value>
                    <fullName>Fixum</fullName>
                </value>
                <value>
                    <fullName>Halco</fullName>
                </value>
                <value>
                    <fullName>Henkel</fullName>
                </value>
                <value>
                    <fullName>Importers</fullName>
                </value>
                <value>
                    <fullName>Koester</fullName>
                </value>
                <value>
                    <fullName>LoveTex</fullName>
                </value>
                <value>
                    <fullName>Moron</fullName>
                </value>
                <value>
                    <fullName>Paiho</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>Samac</fullName>
                </value>
                <value>
                    <fullName>SIMP</fullName>
                </value>
                <value>
                    <fullName>Stockvis</fullName>
                </value>
                <value>
                    <fullName>tesa</fullName>
                </value>
                <value>
                    <fullName>YKK</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Used for deal registration.</description>
        <inlineHelpText>Name  of the competitor(s)</inlineHelpText>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <label>Contact Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State_Province__c</fullName>
        <label>Contact State Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Manager_Email__c</fullName>
        <label>Country Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country_Manager__c</fullName>
        <formula>CASE(Account.Org__c, &quot;VLtd&quot;, &quot;jsmith@velcro.com&quot;, 
&quot;VIF&quot;, &quot;llebris@velcro.com&quot;, &quot;VGmbh&quot;, &quot;mgutzler@velcro.com&quot;, &quot;Velcro GmbH&quot;, &quot;mgutzler@velcro.com&quot;, &quot;VGmbH&quot;, &quot;mgutzler@velcro.com&quot;, &quot;VEIT&quot;, &quot;ericci@velcro.com&quot;, &quot;VESA&quot;, &quot;dmartinez@velcro.com&quot;, Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Credit_Check_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Source_for_Hook_Loop__c</fullName>
        <label>Current Source for Hook &amp; Loop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <description>FOR PC PDR PROCESS</description>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>SUPPLY (CLOSED)</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>VELCRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_Length__c</fullName>
        <description># of Days between Creation and Close Date</description>
        <formula>CloseDate - CDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of Days between Creation and Close Date</inlineHelpText>
        <label>Cycle Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DR_Frozen_Cost__c</fullName>
        <description>Frozen cost uploaded from Oracle</description>
        <label>DR Frozen Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_ID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>DR ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DR_Investment__c</fullName>
        <description>Total Investment uploaded from Oracle</description>
        <label>DR Investment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Item_Description__c</fullName>
        <description>Item Description uploaded from Oracle</description>
        <label>DR Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Lead_Time__c</fullName>
        <description>DR Lead Time uploaded from Oracle</description>
        <label>DR Lead Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Leader_Final_Comments__c</fullName>
        <description>Final comments of leader uploaded from Oracle</description>
        <label>DR Leader Final Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DR_MOQ__c</fullName>
        <description>Mínimum order quantity uploaded from Oracle</description>
        <label>DR MOQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Number__c</fullName>
        <inlineHelpText>Number assigned when initial 3 Qualification Questions have been answered</inlineHelpText>
        <label>Development Request Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Operating_Unit__c</fullName>
        <description>Depending on the value of the label &apos;Enable_DR_Oracle_Sync&apos; , if label is =1,  the formula will set it to a value to be synced with Oracle. If the label is not =&apos;1&apos;, then  formula will return  &apos;9999&apos;  and this will stop the sync with Oracle for DR.</description>
        <formula>IF  (($Label.Enable_DR_Oracle_Sync = &apos;1&apos;),
CASE(UPPER(Account.Org__c), &apos;VESA&apos;, &apos;485&apos;, &apos;VLTD&apos;, &apos;485&apos;, &apos;VGMBH&apos;, &apos;485&apos;, &apos;VIF&apos;, &apos;485&apos;, &apos;VEIT&apos;, &apos;485&apos;, 
&apos;APL&apos;,&apos;485&apos;,
&apos;ABE&apos;,&apos;485&apos;,
&apos;ALFTXBE&apos;,&apos;485&apos;,
&apos;ALFTXDE&apos;,&apos;485&apos;,
&apos;ALFTXES&apos;,&apos;485&apos;,
&apos;ALFTXFR&apos;,&apos;485&apos;,
&apos;ALFTXGV&apos;,&apos;485&apos;,
&apos;ALFTXNL&apos;,&apos;485&apos;,
&apos;ALFTXPL&apos;,&apos;485&apos;,
&apos;ALFTXUK&apos;,&apos;485&apos;,
&apos;VCAN&apos;, &apos;89&apos;, 
&apos;VUSA&apos;, &apos;89&apos;,
&apos;0&apos;
),&apos;9999&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DR Operating Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Project_Manager_Email__c</fullName>
        <inlineHelpText>Email of the Project Manager assigned to this request</inlineHelpText>
        <label>DR Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DR_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project Manager assigned to this request</inlineHelpText>
        <label>DR Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AED_Project_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Engineering_Completed__c</fullName>
        <label>Date Engineering Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expire__c</fullName>
        <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <formula>TODAY() -  CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_til_Close__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days til Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Forward</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>